--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,9 +1,14 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: root
     password: pass
+    hikari:
+      pool-name: my-db-pool
+      maximum-pool-size: 2
   liquibase:
     change-log: classpath:db/changelog/master.xml
     enabled: true
